--- a/sass/style.scss
+++ b/sass/style.scss
@@ -424,7 +424,7 @@ fieldset {
     padding: 21px 0 11px 18px;
     cursor: pointer;
     position: relative;
-    scale: (0);
+    z-index: 1;
     @include desktop-only {
         margin: 40px 0 0 0;
         width: 23em;
@@ -433,33 +433,48 @@ fieldset {
     &:hover {
         transform: scale(1.1);
         box-shadow: 2px 7px 15px -8px #888888;
-        transition: 400ms;
+        transition: 400ms; 
+        .check-circle {
+            transform: translate(0, 100px); 
+            i {
+             opacity: 1;    
+            } 
+        }
     }
     .price {
         position: absolute;
-        right: 8%;
-        bottom: 30%;
+        right: 5%;
+        top: 43px;
         font-weight: bold;
     }
-        label {
-             @include column;
-
-            .menu-title {
-                    font-weight: bold;
-                }
-                .accomp {
-                     margin-top: 10px;
-                }
-                
-                input {
-                    position: absolute;
-                    left: -1999px;
-                }
-                    i {
-                        color: transparent;
-                }
+       h3 {
+          margin: 0;
+        }
+            .accomp {
+                 margin-top: 10px;
             }
-}
+                
+                .check-circle {
+                    i {
+                        position: absolute;
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                        left: 100%;
+                        bottom: 104px;
+                        width: 4em;
+                        height: 79px;
+                        margin: 0 0 0 -15px;
+                        font-size: 1.5rem;
+                        background-color: $colortertiary;
+                        color: $white;
+                        opacity: 0;
+                        border-radius: 0 20px 20px 0;
+                        transition: transform 330ms ease-in-out;
+                    }
+                }
+    }
+
 
 .command_btn {
     color: $white;
