--- a/css/style.css
+++ b/css/style.css
@@ -403,7 +403,6 @@ fieldset {
   padding: 21px 0 11px 18px;
   cursor: pointer;
   position: relative;
-  z-index: 1;
 }
 @media screen and (min-width: 993px) {
   .cards_menu {
@@ -413,44 +412,55 @@ fieldset {
   }
 }
 .cards_menu:hover {
-  transform: scale(1.1);
   box-shadow: 2px 7px 15px -8px #888888;
-  transition: 400ms;
 }
-.cards_menu:hover .check-circle {
-  transform: translate(0, 100px);
+.cards_menu:hover .accomp {
+  width: calc(90% - 80px);
 }
-.cards_menu:hover .check-circle i {
+.cards_menu:hover .check__bg {
   opacity: 1;
+  transform: translateX(-80px);
+}
+.cards_menu:hover .check__bg .check__icon i {
+  transform: rotate(360deg);
+}
+.cards_menu:hover .price {
+  transform: translateX(-80px);
 }
 .cards_menu .price {
   position: absolute;
-  right: 5%;
-  top: 43px;
+  right: 3%;
+  top: 37px;
   font-weight: bold;
+  transition: transform 400ms linear;
 }
 .cards_menu h3 {
   margin: 0;
 }
 .cards_menu .accomp {
+  width: 90%;
   margin-top: 10px;
+  transition: width 350ms linear;
 }
-.cards_menu .check-circle i {
-  position: absolute;
+.cards_menu .check__bg {
   display: flex;
-  align-items: center;
   justify-content: center;
-  left: 100%;
-  bottom: 104px;
-  width: 4em;
-  height: 79px;
-  margin: 0 0 0 -15px;
-  font-size: 1.5rem;
+  align-items: center;
+  position: absolute;
+  border-radius: 0 1rem 1rem 0;
+  height: 86px;
+  width: 63px;
+  bottom: 0;
+  left: 105%;
   background-color: #99e2d0;
   color: #fff;
+  transition: transform 400ms linear;
+  transform-origin: right;
   opacity: 0;
-  border-radius: 0 20px 20px 0;
-  transition: transform 330ms ease-in-out;
+}
+.cards_menu .check__bg .check__icon i {
+  font-size: 1.5rem;
+  transition: transform 600ms;
 }
 
 .command_btn {
