--- a/sass/style.scss
+++ b/sass/style.scss
@@ -420,13 +420,14 @@ fieldset {
 }
 
 .cards_menu {
+    @include column;
     background-color: $white;
     border-radius: 1rem;
     @include card-shadow;
     width: 100%;
     height: 6em;
     margin: 41px 52px 0 0;
-    padding: 21px 0 11px 18px;
+    padding: 21px 0 0 18px;
     cursor: pointer;
     position: relative;
     @include desktop-only {
@@ -436,40 +437,39 @@ fieldset {
     } 
     &:hover {
         box-shadow: 2px 7px 15px -8px #888888; 
-        .accomp {
-            width: calc(90% - 80px);
-        }
-            .check__bg {
+        
+            .cards_menu--icon {
                 opacity: 1;
                 transform: translateX(-80px);
-                .check__icon {
                     i {
                     transform: rotate(360deg);
                     }
                 }
-            }
-                .price {
+                .cards_menu--price {
                     transform: translateX(-80px);
-                } 
+                    margin: -32px 0px 0 333px;
+                }
             }
+                .accomp {
+                    white-space: nowrap;
+                    overflow: hidden;
+                    text-overflow: ellipsis;    
+                }
 
-    .price {
-        position: absolute;
-        right: 3%;
-        top: 37px;
+    .cards_menu--price {
         font-weight: bold;
         transition: transform 400ms linear;
+        margin: -32px 0 0 19rem;
     }
        h3 {
           margin: 0;
         }
             .accomp {
-                width: 90%;
                  margin-top: 10px;
-                 transition: width 350ms linear;
+                 transition: width 400ms linear;
             }
                 
-                .check__bg {
+                .cards_menu--icon {
                     @include center;
                     position: absolute;
                     border-radius: 0 1rem 1rem 0;
@@ -478,18 +478,17 @@ fieldset {
                     bottom: 0;
                     left: 105%;
                     background-color: $colortertiary;
-                    color: $white;
-                    transition: transform 400ms linear;  
-                    transform-origin: right;                  
+                    transition: transform 400ms ease-in;  
+                                    
                     opacity: 0;
-                    .check__icon {
                         i {
                         font-size: 1.5rem;
                         transition: transform 600ms;
+                        color: $white;
                         }
                     }
-                }
         }
+    
 
 .command_btn {
     color: $white;
