--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@
   height: auto;
   padding: 10px 0 15px 0;
 }
-@media screen and (min-width: 993px) {
+@media screen and (min-width: 760px) {
   #logo {
     width: 13%;
     height: auto;
@@ -97,7 +97,7 @@
   text-align: center;
   font-size: 2rem;
 }
-@media screen and (min-width: 993px) {
+@media screen and (min-width: 760px) {
   .explain h2 {
     text-align: center;
     font-size: 2rem;
@@ -111,7 +111,7 @@
   margin-top: 30px;
   gap: 25px;
 }
-@media screen and (min-width: 993px) {
+@media screen and (min-width: 760px) {
   .card_functioning {
     flex-direction: row;
     gap: 80px;
@@ -142,7 +142,7 @@
   width: 100%;
   height: 86px;
 }
-@media screen and (min-width: 993px) {
+@media screen and (min-width: 760px) {
   .btn {
     width: 30%;
   }
@@ -168,7 +168,7 @@
 #restaurants h2 {
   padding: 40px 0 0 30px;
 }
-@media screen and (min-width: 993px) {
+@media screen and (min-width: 760px) {
   #restaurants h2 {
     text-align: center;
     font-size: 2rem;
@@ -186,7 +186,7 @@ section a {
   align-items: center;
   padding-bottom: 75px;
 }
-@media screen and (min-width: 993px) {
+@media screen and (min-width: 760px) {
   .all_cards {
     flex-direction: row;
     flex-wrap: wrap;
@@ -213,7 +213,7 @@ section a {
   transform-origin: bottom;
   transition: 400ms;
 }
-@media screen and (min-width: 993px) {
+@media screen and (min-width: 760px) {
   .card_choice {
     width: 34%;
     height: 22em;
@@ -223,7 +223,7 @@ section a {
   margin: 4px 0 0 13px;
   font-size: 1.5rem;
 }
-@media screen and (min-width: 993px) {
+@media screen and (min-width: 760px) {
   .card_choice h3 {
     margin: 16px 0 0 26px;
   }
@@ -234,7 +234,7 @@ section a {
   object-fit: cover;
   border-radius: 1rem 1rem 0 0;
 }
-@media screen and (min-width: 993px) {
+@media screen and (min-width: 760px) {
   .card_choice img {
     width: 100%;
     height: 16em;
@@ -272,7 +272,7 @@ section a {
   margin: 10px 0 0 13px;
   font-size: 1.2rem;
 }
-@media screen and (min-width: 993px) {
+@media screen and (min-width: 760px) {
   .card_choice .site {
     margin: 10px 0 0 25px;
   }
@@ -282,7 +282,7 @@ section a {
 .footer {
   background-color: #383838;
 }
-@media screen and (min-width: 993px) {
+@media screen and (min-width: 760px) {
   .footer {
     display: flex;
     flex-direction: column;
@@ -309,7 +309,7 @@ section a {
   list-style-type: none;
   margin: 8px;
 }
-@media screen and (min-width: 993px) {
+@media screen and (min-width: 760px) {
   .links li {
     display: flex;
     justify-content: center;
@@ -378,7 +378,7 @@ fieldset {
   display: flex;
   flex-direction: column;
 }
-@media screen and (min-width: 993px) {
+@media screen and (min-width: 760px) {
   .all_cards-menu {
     flex-direction: row;
     gap: 80px;
@@ -404,64 +404,82 @@ fieldset {
   margin: 41px 52px 0 0;
   padding: 21px 0 0 18px;
   cursor: pointer;
-  position: relative;
+  overflow: hidden;
 }
-@media screen and (min-width: 993px) {
+@media screen and (min-width: 760px) {
   .cards_menu {
     margin: 40px 0 0 0;
     width: 23em;
     height: 86px;
   }
 }
-.cards_menu:hover {
-  box-shadow: 2px 7px 15px -8px #888888;
+.cards_menu .cards__description {
+  overflow: hidden;
 }
-.cards_menu:hover .cards_menu--icon {
-  opacity: 1;
-  transform: translateX(-80px);
-}
-.cards_menu:hover .cards_menu--icon i {
-  transform: rotate(360deg);
-}
-.cards_menu:hover .cards_menu--price {
-  transform: translateX(-80px);
-  margin: -32px 0px 0 333px;
-}
-.cards_menu .accomp {
+.cards_menu .cards__description h3 {
+  margin: 0;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
 }
+.cards_menu .cards__description p {
+  margin-top: 10px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.cards_menu .cards_menu--check {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  margin-top: -87px;
+  overflow: hidden;
+}
 .cards_menu .cards_menu--price {
   font-weight: bold;
   transition: transform 400ms linear;
-  margin: -32px 0 0 19rem;
+  align-self: flex-end;
+  margin: 0 4px 24px 0;
 }
-.cards_menu h3 {
-  margin: 0;
-}
-.cards_menu .accomp {
-  margin-top: 10px;
-  transition: width 400ms linear;
+@media screen and (min-width: 760px) {
+  .cards_menu .cards_menu--price {
+    margin: 0 4px 14px 0;
+  }
 }
 .cards_menu .cards_menu--icon {
   display: flex;
   justify-content: center;
   align-items: center;
-  position: absolute;
   border-radius: 0 1rem 1rem 0;
-  height: 86px;
+  height: 105px;
   width: 63px;
-  bottom: 0;
-  left: 105%;
+  margin: 0 -63px 0 6px;
   background-color: #99e2d0;
-  transition: transform 400ms ease-in;
-  opacity: 0;
+  transition: transform 400ms linear;
+  transform-origin: right;
+}
+@media screen and (min-width: 760px) {
+  .cards_menu .cards_menu--icon {
+    height: 86px;
+  }
 }
 .cards_menu .cards_menu--icon i {
   font-size: 1.5rem;
   transition: transform 600ms;
   color: #fff;
+}
+.cards_menu:hover {
+  box-shadow: 2px 7px 15px -8px #888888;
+}
+.cards_menu:hover .cards_menu--icon {
+  opacity: 1;
+  transform: translateX(-63px);
+}
+.cards_menu:hover .cards_menu--icon i {
+  transform: rotate(360deg);
+}
+.cards_menu:hover .cards_menu--price {
+  transform: translateX(-63px);
 }
 
 .command_btn {
