--- a/sass/style.scss
+++ b/sass/style.scss
@@ -39,11 +39,15 @@ $pinklight: #f5edff;
     z-index: 2;
     right: 5%;
 }
-
 @mixin desktop-only {
-    @media screen and (min-width: 993px) {
+    @media screen and (min-width: 760px) {
         @content;
     }
+}
+@mixin ellipsis {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;  
 }
 
 /* Tout le contenu de la page */ 
@@ -429,65 +433,71 @@ fieldset {
     margin: 41px 52px 0 0;
     padding: 21px 0 0 18px;
     cursor: pointer;
-    position: relative;
+    overflow: hidden;
     @include desktop-only {
         margin: 40px 0 0 0;
         width: 23em;
         height: 86px;
     } 
-    &:hover {
-        box-shadow: 2px 7px 15px -8px #888888; 
-        
-            .cards_menu--icon {
-                opacity: 1;
-                transform: translateX(-80px);
-                    i {
-                    transform: rotate(360deg);
-                    }
-                }
-                .cards_menu--price {
-                    transform: translateX(-80px);
-                    margin: -32px 0px 0 333px;
-                }
+        .cards__description {
+            overflow: hidden;
+            h3 {
+                margin: 0;
+                @include ellipsis;
             }
-                .accomp {
-                    white-space: nowrap;
+                p {
+                    margin-top: 10px;
+                    @include ellipsis;
+                }
+        }     
+                .cards_menu--check {
+                    display: flex;
+                    flex-direction: row;
+                    justify-content: flex-end;
+                    margin-top: -87px;
                     overflow: hidden;
-                    text-overflow: ellipsis;    
                 }
-
-    .cards_menu--price {
-        font-weight: bold;
-        transition: transform 400ms linear;
-        margin: -32px 0 0 19rem;
-    }
-       h3 {
-          margin: 0;
-        }
-            .accomp {
-                 margin-top: 10px;
-                 transition: width 400ms linear;
-            }
-                
-                .cards_menu--icon {
-                    @include center;
-                    position: absolute;
-                    border-radius: 0 1rem 1rem 0;
-                    height: 86px;
-                    width: 63px;
-                    bottom: 0;
-                    left: 105%;
-                    background-color: $colortertiary;
-                    transition: transform 400ms ease-in;  
-                                    
-                    opacity: 0;
-                        i {
-                        font-size: 1.5rem;
-                        transition: transform 600ms;
-                        color: $white;
+                    .cards_menu--price {
+                        font-weight: bold;
+                        transition: transform 400ms linear;
+                        align-self: flex-end;
+                        margin: 0 4px 24px 0;
+                        @include desktop-only {
+                            margin: 0 4px 14px 0;
                         }
                     }
-        }
+                    .cards_menu--icon {
+                        @include center;
+                        border-radius: 0 1rem 1rem 0;
+                        height: 105px;
+                        width: 63px;
+                        margin: 0 -63px 0 6px;
+                        background-color: $colortertiary;
+                        transition: transform 400ms linear;
+                        transform-origin: right;  
+                        @include desktop-only {
+                            height: 86px;
+                        }            
+                            i {
+                            font-size: 1.5rem;
+                            transition: transform 600ms;
+                            color: $white;
+                            }
+                    }
+                        &:hover {
+                            box-shadow: 2px 7px 15px -8px #888888; 
+                                .cards_menu--icon {
+                                    opacity: 1;
+                                    transform: translateX(-63px);
+                                        i {
+                                        transform: rotate(360deg);
+                                        }
+                                }
+                                .cards_menu--price {
+                                    transform: translateX(-63px);   
+                                }
+                        }  
+    }
     
 
 .command_btn {
