--- a/sass/style.scss
+++ b/sass/style.scss
@@ -404,6 +404,18 @@ fieldset {
                 color: $greyblack;
                 position: absolute;
                 right: 5%;
+                transform: translateY(-50%); 
+                cursor: pointer;
+            }
+            .fas {
+                -webkit-text-fill-color: transparent;
+                background: -webkit-linear-gradient($colorprimary, $colorsecondary);
+                transition: opacity 250ms;
+                opacity: 0; 
+                -webkit-background-clip: text;
+                        &:hover {                            
+                        opacity: 1; 
+                        } 
             }
 }
 
@@ -511,4 +523,3 @@ fieldset {
     border: none;
     cursor: pointer;
 }
-
