--- a/css/style.css
+++ b/css/style.css
@@ -387,8 +387,36 @@ fieldset {
 }
 
 .all_cards-menu {
+  overflow: hidden;
   display: flex;
   flex-direction: column;
+}
+.all_cards-menu:nth-child(1) {
+  color: #000000;
+}
+.all_cards-menu:nth-child(2) {
+  color: #000000;
+}
+.all_cards-menu:nth-child(3) {
+  color: #000000;
+}
+.all_cards-menu:nth-child(4) {
+  color: #000000;
+}
+.all_cards-menu:nth-child(5) {
+  color: #000000;
+}
+.all_cards-menu:nth-child(6) {
+  color: #000000;
+}
+.all_cards-menu:nth-child(7) {
+  color: #000000;
+}
+.all_cards-menu:nth-child(8) {
+  color: #000000;
+}
+.all_cards-menu:nth-child(9) {
+  color: #000000;
 }
 @media screen and (min-width: 760px) {
   .all_cards-menu {
@@ -406,6 +434,8 @@ fieldset {
 }
 
 .cards_menu {
+  animation: appear 900ms ease-in-out 1ms;
+  transform-origin: top;
   display: flex;
   flex-direction: column;
   background-color: #fff;
@@ -504,6 +534,16 @@ fieldset {
   margin: 30px;
   border: none;
   cursor: pointer;
+}
+
+/* Keyframes */
+@keyframes appear {
+  0% {
+    transform: scale(0);
+  }
+  100% {
+    transform: scale(1);
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
