--- a/sass/style.scss
+++ b/sass/style.scss
@@ -9,6 +9,7 @@ $colorsecondary: #ff79da;
 $colortertiary: #99e2d0;
 $white: #fff;
 $pinklight: #f5edff;
+$black: #000000;
 
 /*Mixins*/ 
 
@@ -20,6 +21,12 @@ $pinklight: #f5edff;
 }
 @mixin card-shadow {
     box-shadow: 2px 7px 15px -13px $darkengray;
+}
+@mixin position-shadow {
+    box-shadow: inset 0px 11px 13px -12px $darkengray;
+}
+@mixin shadow-hover {
+    box-shadow: 2px 7px 15px -8px #888888;
 }
 @mixin column {
     display: flex;
@@ -58,7 +65,7 @@ $pinklight: #f5edff;
 
 /* Page accueil*/ /*Body*/
 
-.container {
+body {
     margin: auto;
     @include roboto;
 }
@@ -82,7 +89,7 @@ $pinklight: #f5edff;
 .position {
     display: flex;
     justify-content: center;
-    box-shadow: inset 0px 11px 13px -12px $darkengray;
+    @include position-shadow;
     background-color: $mediumgray;
     height: 85px;
         label {
@@ -219,7 +226,7 @@ $pinklight: #f5edff;
 section {
     a {
     text-decoration: none;
-    color: #000000;
+    color: $black;
     }
 }
 
@@ -245,7 +252,7 @@ section {
     position: relative;
     margin: 48px 0 0 0;
     &:hover {
-        box-shadow: 2px 7px 15px -8px #888888; 
+        @include shadow-hover; 
     }
     @include desktop-only {
         width: 34%;
