--- a/sass/style.scss
+++ b/sass/style.scss
@@ -446,7 +446,7 @@ fieldset {
     background-color: $white;
     border-radius: 1rem;
     @include card-shadow;
-    width: 100%;
+    width: 23em;
     height: 6em;
     margin: 0 0 20px 0;
     cursor: pointer;
@@ -472,7 +472,10 @@ fieldset {
                 display: flex;
                 align-items: flex-end;
                     font-weight: bold;
+                    margin: 0 5px 28px 0;
+                    @include desktop-only {
                     margin: 0 5px 15px 0;
+                    }
             }
                 .cards_menu--check {
                     display: flex;
@@ -505,7 +508,7 @@ fieldset {
                             transition: margin-right 0.5s linear;
                         }
                             .cards_menu--price {
-                                margin: 0 5px 14px 0;
+                                margin: 0 5px 28px 0;
                             }
                                 .cards_menu--icon {
                                     width: 4rem;
