mise en place défilement cards

--- a/css/style.css
+++ b/css/style.css
@@ -368,7 +368,6 @@ fieldset {
   color: #383838;
   position: absolute;
   right: 5%;
-  transform: translateY(-50%);
   cursor: pointer;
 }
 .title .fas {
@@ -406,6 +405,8 @@ fieldset {
 }
 
 .cards_menu {
+  overflow: hidden;
+  animation: appear 1s both;
   display: flex;
   background-color: #fff;
   border-radius: 1rem;
@@ -414,7 +415,36 @@ fieldset {
   height: 6em;
   margin: 0 0 20px 0;
   cursor: pointer;
-  overflow: hidden;
+}
+.cards_menu:nth-child(1) {
+  animation-delay: 100ms;
+}
+.cards_menu:nth-child(2) {
+  animation-delay: 200ms;
+}
+.cards_menu:nth-child(3) {
+  animation-delay: 300ms;
+}
+.cards_menu:nth-child(4) {
+  animation-delay: 400ms;
+}
+.cards_menu:nth-child(5) {
+  animation-delay: 500ms;
+}
+.cards_menu:nth-child(6) {
+  animation-delay: 600ms;
+}
+.cards_menu:nth-child(7) {
+  animation-delay: 700ms;
+}
+.cards_menu:nth-child(8) {
+  animation-delay: 800ms;
+}
+.cards_menu:nth-child(9) {
+  animation-delay: 900ms;
+}
+.cards_menu:nth-child(10) {
+  animation-delay: 1000ms;
 }
 @media screen and (min-width: 760px) {
   .cards_menu {
@@ -508,6 +538,16 @@ fieldset {
   margin: 30px;
   border: none;
   cursor: pointer;
+}
+
+/* Keyframes */
+@keyframes appear {
+  0% {
+    transform: scale(0);
+  }
+  100% {
+    transform: scale(1);
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
